# yarp_ros_bridge

./: LICENSE  README.md
bridge/: manifest.xml
bridge/include/: bridge.h  bridgeHeader.h  convertModule.h  convertThread.h  dataThread.h  fRBridge.h  fRDataBridge.h  fRImageBridge.h  imageThread.h  pythonWrapper.h
bridge/src/: bridgeHeader.cpp  convertModule.cpp  convertThread.cpp  dataThread.cpp  fRBridge.cpp  fRDataBridge.cpp  fRImageBridge.cpp  imageThread.cpp  mainBridge.cpp  pythonWrapper.cpp
bridge/src/python/: automaticrosprobing.py  stringifymsg.py
bridge/src/scripts/: compile_ros.sh
bridge/src/to_ros_data_handler/: CMakeLists.txt  mainpage.dox  manifest.xml
bridge/src/to_ros_image_handler/: CMakeLists.txt
bridge_GUI/: CMakeLists.txt  INSTRUCTIONS.txt
bridge_GUI/include/: bridgetabs.h  iohandler.h  mainwindow.h
bridge_GUI/src/: bridgetabs.cpp  iohandler.cpp  main.cpp  mainwindow.cpp
doc/: mainpage.dox
examples/: head_pose_bridge.ini  r2y_data_a.ini
